fix text-align

--- a/src/less/blocks/_93-info-card.less
+++ b/src/less/blocks/_93-info-card.less
@@ -312,6 +312,9 @@
 				text-align: right;
 
 			}
+			.info-card__title{
+				text-align: left;
+			}
 		}
 		.info-card.info-card--bg:nth-child(odd){
 			.marked-text{
@@ -369,6 +372,9 @@
 				align-items: flex-end;
 				position: relative;
 
+			}
+			.info-card__title{
+				text-align: left;
 			}
 		}
 	}
